--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://gun.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://shoot_em_up.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://trees/", "res://pistol/", "res://characters/slime/", "res://characters/happy_boo/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,8 +27,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://player.tscn", "res://gun.tscn", "res://mob_slime.tscn")
-current_scene="res://mob_slime.tscn"
+open_scenes=PackedStringArray("res://player.tscn", "res://gun.tscn", "res://mob_slime.tscn", "res://shoot_em_up.tscn")
+current_scene="res://player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://gun.gd", "res://characters/happy_boo/happy_boo.gd", "res://mob_slime.gd", "res://player.gd", "res://characters/slime/slime.gd"]
-selected_script="res://mob_slime.gd"
+selected_script="res://player.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
@@ -47,3 +47,13 @@ list_split_offset=0
 open_shaders=[]
 split_offset=0
 selected_shader=""
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
